# Project-MLOps

./: .gitignore  README.md  data.dvc  pyproject.toml  requirements.txt  tasks.py
.dvc/: config
.github/workflows/: tests.yaml
configs/: cloudbuild.yaml  config.yaml  config_gpu.yaml  hyperparams.yaml  sweep.yaml  vertex_ai_train.yaml
deployment/: backend.py  frontend.py  requirements_backend.txt  requirements_frontend.txt
dockerfiles/: api.dockerfile  backend.dockerfile  train.dockerfile
outputs/2025-01-18/17-09-49/.hydra/: config.yaml  hydra.yaml
outputs/2025-01-22/14-39-37/.hydra/: config.yaml  hydra.yaml  overrides.yaml
reports/: README.md  report.html
src/project/: data.py
src/project_mlops/: api.py  data.py  data_cloud.py  evaluate.py  model.py  model_export.py  train.py  train_cloud.py  utils.py  visualize.py
tests/: test_api.py  test_data.py  test_model.py
