[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops_group35"
version = "0.0.1"
description = "MLOps project for the course '02476 Machine Learning Operations'"
authors = [
  { name = "Mustafa Berkay Akbulut", email = "bakbulut96@gmail.com"},
  { name = "Özkan Yamaner", email = "abc@gmail.com"},
  { name = "Sonny Ma", email = "def@gmail.com" }
]
keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120

[tool.coverage.run]
omit = ["tests/*"]
